[package]
authors = ["poly000"]
license = "AGPL-3.0"
name = "choyen_bot"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/poly000/choyen_bot"
description = "simple 5000 choyen bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
choyen_5000 = "0.2.1"
teloxide = { version = "0.11.0", features = ["macros", "ctrlc_handler"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.72"

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = 3

